Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110020

Qt core docs: io.html says it lists 'Qt Core' classes but actually from other modules

XMLWordPrintable

    • All
    • 76ecff6ae (dev), 8a0bf7e0e (tqtc/lts-5.15), 3811d7dfc (tqtc/lts-6.2), 58fc19b68 (6.4), d6486bcd9 (6.5)
    • DaVinci 72

      The page https://doc-snapshots.qt.io/qt6-dev/io.html (Qt 6.6.0 ('dev' branch)

      Says:

      These Qt Core classes are used to handle input and output to and from external devices, processes, files etc. as well as manipulating files and directories.

      But actually lists:

      QImageReader, QImageWriter, QTextDocumentWriter from Qt GUI module;

      Qt3DRender::QSceneLoader from Qt 3D Render module.

      Also this is a case for Qt 5 documentation:
      https://doc.qt.io/qt-5/io.html

      Expected result:
      This page should not list classes from the other modules, or clearly stated they are outside of Qt Core module.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andreas.eliasson Andreas Eliasson
            asashnov Alexander Sashnov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: