Doc: Only list qt core classes in qt core io group

The group page for Qt core classes related to I/O include classes from
other modules. Remove these classes from the group; it may confuse
the reader.

Fixes: QTBUG-110020
Change-Id: If7df85523ce6b3aa09605bd89d9899ce308d2671
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
(cherry picked from commit 76ecff6aebb35f4e39439aab8d18d828c3c8a1fd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>